--- a/GestionePrenotazioni/pom.xml
+++ b/GestionePrenotazioni/pom.xml
@@ -26,6 +26,12 @@
             <artifactId>LGoodDatePicker</artifactId>
             <version>11.2.1</version>
         </dependency>
+
+        <dependency>
+            <groupId>org.swinglabs.swingx</groupId>
+            <artifactId>swingx-autocomplete</artifactId>
+            <version>1.6.5-1</version>
+        </dependency>
     </dependencies>
 
 </project>
