--- a/GestionePrenotazioni/pom.xml
+++ b/GestionePrenotazioni/pom.xml
@@ -45,6 +45,14 @@
             <artifactId>google-oauth-client-jetty</artifactId>
             <version>1.31.5</version>
         </dependency>
+
+        <!-- https://mvnrepository.com/artifact/jfree/jfreechart -->
+        <dependency>
+            <groupId>jfree</groupId>
+            <artifactId>jfreechart</artifactId>
+            <version>1.0.13</version>
+        </dependency>
+
     </dependencies>
 
 </project>
