aggiunta licenza e copyright

--- a/GestionePrenotazioni/pom.xml
+++ b/GestionePrenotazioni/pom.xml
@@ -1,4 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
+
+<!--
+   Copyright (C) 2023 Alessandro Bianco
+   Questo progetto è stato creato da Alessandro Bianco
+-->
+
 <project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
@@ -54,5 +60,12 @@
         </dependency>
 
     </dependencies>
+
+    <licenses>
+        <license>
+            <name>Apache</name>
+            <url>https://www.apache.org/licenses/LICENSE-2.0.txt</url>
+        </license>
+    </licenses>
 
 </project>
