--- a/GestionePrenotazioni/pom.xml
+++ b/GestionePrenotazioni/pom.xml
@@ -63,8 +63,8 @@
 
     <licenses>
         <license>
-            <name>Apache</name>
-            <url>https://www.apache.org/licenses/LICENSE-2.0.txt</url>
+            <name>Apache License, Version 2.0</name>
+            <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
         </license>
     </licenses>
 
